added basic register flow
