# docs/swagger.json
@@ -15,6 +15,40 @@
         }
     },
     "paths": {
+        "/authentication/user": {
+            "post": {
+                "description": "Registers a user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "authentication"
+                ],
+                "summary": "Registers a user",
+                "parameters": [
+                    {
+                        "description": "User credentials",
+                        "name": "payload",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/main.registerUserPayload"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "User registered",
+                        "schema": {
+                            "$ref": "#/definitions/store.User"
+                        }
+                    }
+                }
+            }
+        },
         "/health": {
             "get": {
                 "description": "Healthcheck endpoint",
@@ -481,6 +515,28 @@
                 }
             }
         },
+        "main.registerUserPayload": {
+            "type": "object",
+            "required": [
+                "email",
+                "password",
+                "username"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string",
+                    "maxLength": 225
+                },
+                "password": {
+                    "type": "string",
+                    "maxLength": 100
+                },
+                "username": {
+                    "type": "string",
+                    "maxLength": 100
+                }
+            }
+        },
         "main.updatePostPayload": {
             "type": "object",
             "properties": {
@@ -561,6 +617,9 @@
                 }
             }
         },
+        "store.Password": {
+            "type": "object"
+        },
         "store.Post": {
             "type": "object",
             "properties": {
@@ -613,6 +672,14 @@
                 },
                 "id": {
                     "type": "integer"
+                },
+                "password": {
+                    "description": "The `\"-\"` JSON tag ensures that `Password` is not included in JSON responses.",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/store.Password"
+                        }
+                    ]
                 },
                 "username": {
                     "type": "string"
